fix z-index single vidoe

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -125,6 +125,7 @@
   top: 15%;
   left: 2%;
   border: 2px solid green;
+  z-index: 1;
 }
 
 #peer {
